fix(dialog): removed align-items and justify-content center

--- a/components/dialog/dialog.scss
+++ b/components/dialog/dialog.scss
@@ -52,8 +52,6 @@ $sizes: compact, comfortable, spacious, dense;
 
     .ids-dialog-content {
       display: flex;
-      align-items: center;
-      justify-content: center;
       overflow-y: auto;
       background: var(--ids-comp-dialog-content-color-bg-default);
 
